added tests for object service