@@ -6,11 +6,14 @@ import com.zavga.diplom.dto.object.SecurityObjectRequestDTO;
 import com.zavga.diplom.dto.object.SecurityObjectResponseDTO;
 import com.zavga.diplom.entity.customer.Customer;
 import com.zavga.diplom.entity.object.SecurityObject;
+import com.zavga.diplom.entity.work.InstallationWork;
 import com.zavga.diplom.repository.customer.CustomerRepository;
 import com.zavga.diplom.repository.object.SecurityObjectRepository;
+import com.zavga.diplom.repository.work.InstallationWorkRepository;
 import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
 
+import java.util.HashSet;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
@@ -22,17 +25,20 @@ public class SecurityObjectService {
     private final SecurityObjectRepository securityObjectRepository;
     private final SecurityObjectMapper mapper;
     private final CustomerRepository customerRepository;
+    private final InstallationWorkRepository workRepository;
 
     public SecurityObjectService(SecurityObjectRepository securityObjectRepository, SecurityObjectMapper mapper,
-                                 CustomerRepository customerRepository){
+                                 CustomerRepository customerRepository,
+                                 InstallationWorkRepository workRepository){
         this.securityObjectRepository = securityObjectRepository;
         this.mapper = mapper;
         this.customerRepository = customerRepository;
+        this.workRepository = workRepository;
     }
 
     public List<SecurityObjectResponseDTO> getAll(){
         var objects = this.securityObjectRepository.findAll();
-        return objects.stream().map(o -> mapper.toResponseDto(o)).collect(Collectors.toList());
+        return objects.stream().map(o -> mapper.toResponseDto(o)).toList();
     }
 
     public Optional<SecurityObjectResponseDTO> getById(Long id){
@@ -40,6 +46,7 @@ public class SecurityObjectService {
         if(object.isEmpty()){
             return Optional.empty();
         }
+
         SecurityObjectResponseDTO dto = mapper.toResponseDto(object.get());
         return Optional.of(dto);
     }
@@ -48,14 +55,20 @@ public class SecurityObjectService {
         var object = mapper.toEntity(objectRequestDTO);
         var customer = customerRepository.findById(objectRequestDTO.customerId()).orElseThrow();
         object.setCustomer(customer);
+        if(objectRequestDTO.worksId() != null && !objectRequestDTO.worksId().isEmpty()){
+            var works = new HashSet<>(workRepository.findAllById(objectRequestDTO.worksId()));
+            if(!works.isEmpty())
+                object.setWorks(works);
+        }
         var savedObject = securityObjectRepository.save(object);
         return mapper.toResponseDto(savedObject);
     }
     @Transactional
     public SecurityObjectResponseDTO updateObject(Long id, SecurityObjectRequestDTO requestDTO){
         var customer = customerRepository.findById(requestDTO.customerId());
+        var works = workRepository.findAllById(requestDTO.worksId());
         var object = securityObjectRepository.findById(id);
-        if(object.isEmpty() || customer.isEmpty()){
+        if(object.isEmpty() || customer.isEmpty() || works.isEmpty()){
             throw new NoSuchElementException();
         }
         var objectToUpdate = mapper.toEntity(requestDTO);
